center that bitch

--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
 
 <body>
     <div class="blur"></div>
-    <h1 class = "hero">Are the Sentients here?</h1>
-    <div class="data"></br>
-        <h1 id="status">Loading...</h1>
-        <div id="mission"></div>
-        <div id="expires"></div>
+    <h1 class="hero">Are the Sentients here?</h1>
+    <div class="data">
+        <div class="center_you_fucks">
+            <h1 id="status">Loading...</h1>
+            <div id="mission"></div>
+            <div id="expires"></div>
+        </div>
     </div>
     <div class="bottom"></div>
     <div class="container">
         <div class="footer">
-            &copy; 2019 <a href="https://github.com/hadn69"><span class="ion-transgender rainbow"> Hadn69</span></a>. Images &copy; Digital Extremes - I take no
+            &copy; 2019 <a href="https://github.com/hadn69"><span class="ion-transgender rainbow"> Hadn69</span></a>.
+            Images &copy; Digital Extremes - I take no
             credit for their work.
         </div>
     </div>
-    
+
     <script src="butts.js"></script>
 </body>
 
