i think things look less shit

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="footer">
             &copy; 2019 <a href="https://github.com/hadn69"><span class="ion-transgender rainbow"> Hadn69</span></a>.
             Images &copy; Digital Extremes - I take no
-            credit for their work.
+            credit for their work. <a href="https://github.com/hadn69/Warframe-Sentient-Tracker">View the source on Github!</a>
         </div>
     </div>
 
