used supply of elbow grease

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="300" />
     <title>Warframe Sentient Tracker</title>
     <link rel="shortcut icon" href="/img/favicon.png">
     <script src="anal.js"></script>
